--- a/_zBronzeTraining/Bronze_Metal_ArkETF_Bot.ipynb
+++ b/_zBronzeTraining/Bronze_Metal_ArkETF_Bot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "class Config:\n",
+    "class Config: #this is the tensor config\n",
     "    def __init__(self, agent_class=None, env_class=None, env_args=None):\n",
     "        self.env_class = env_class  # env = env_class(**env_args)\n",
     "        self.env_args = env_args  # env = env_class(**env_args)\n",
@@ -256,12 +265,12 @@
     "        # A higher discount factor (e.g. 0.99) means that the algorithm will be more patient and will prefer long-term rewards over short-term rewards, \n",
     "        # while a lower discount factor (e.g. 0.9) means that the algorithm will be more short-sighted and will focus more on immediate rewards.\n",
     "        \n",
-    "        self.gamma = 0.90  # discount factor of future rewards\n",
+    "        self.gamma = 0.92  # discount factor of future rewards\n",
     "        self.reward_scale = 1.0  # an approximate target reward usually be closed to 256\n",
     "\n",
     "        '''Arguments for training'''\n",
     "        self.gpu_id = int(0)  # `int` means the ID of single GPU, -1 means CPU\n",
-    "        self.net_dims = (128,64,32,16)  # the middle layer dimension of MLP (MultiLayer Perceptron)\n",
+    "        self.net_dims = (128,64,32,16,8,4)  # the middle layer dimension of MLP (MultiLayer Perceptron)\n",
     "        self.learning_rate = 6e-5  # 2 ** -14 ~= 6e-5\n",
     "        self.soft_update_tau = 5e-3  # 2 ** -8 ~= 5e-3\n",
     "        self.batch_size = int(128)  # num of transitions sampled from replay buffer.\n",
@@ -319,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,18 +374,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1066462666.py, line 44)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[117], line 44\u001b[1;36m\u001b[0m\n\u001b[1;33m    def update_net(self, buffer List[Tuple]) -> [float]:\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "class AgentPPO(AgentBase):\n",
@@ -422,7 +422,7 @@
     "        undones = (1 - dones.type(torch.float32)).unsqueeze(1)\n",
     "        return states, actions, logprobs, rewards, undones\n",
     "\n",
-    "    def update_net(self, buffer List[Tuple]) -> [float]:\n",
+    "    def update_net(self, buffer) -> [float]:\n",
     "        with torch.no_grad():\n",
     "            states, actions, logprobs, rewards, undones = buffer\n",
     "            buffer_size = states.shape[0]\n",
@@ -485,13 +485,12 @@
     "            delta = rewards[t] + masks[t] * next_value - values[t]\n",
     "            advantages[t] = advantage = delta + masks[t] * self.lambda_gae_adv * advantage\n",
     "            next_value = values[t]\n",
-    "        return advantages\n",
-    "\n"
+    "        return advantages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,18 +558,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis ')' does not match opening parenthesis '[' (3306711378.py, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[119], line 16\u001b[1;36m\u001b[0m\n\u001b[1;33m    def step(self, action: int) -> Tuple[int, float, bool, dict):  # agent interacts in env\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ')' does not match opening parenthesis '['\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "class PendulumEnv(gym.Wrapper):  # a demo of custom gym env\n",
@@ -588,7 +578,7 @@
     "    def reset(self) -> np.ndarray:  # reset the agent in env\n",
     "        return self.env.reset()\n",
     "\n",
-    "    def step(self, action: int) -> Tuple[int, float, bool, dict):  # agent interacts in env\n",
+    "    def step(self, action: int) -> Tuple[int, float, bool, dict]:  # agent interacts in env\n",
     "        # We suggest that adjust action space to (-1, +1) when designing a custom env.\n",
     "        state, reward, done, info_dict = self.env.step(action * 2)\n",
     "        return state.reshape(self.state_dim), float(reward), done, info_dict\n",
@@ -636,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +814,7 @@
     "        #everything below was added to override the default parameters in stocktrading_NP\n",
     "        'config': None,\n",
     "        'initial_account': 2e3,\n",
-    "        'gamma': .91,\n",
+    "        'gamma': .92,\n",
     "        'turbulence_thresh': 30,\n",
     "        'min_stock_rate': 5e-1,\n",
     "        'max_stock': 1e2,\n",
@@ -858,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +898,7 @@
     "        #everything below was added to override the default parameters in stocktrading_NP\n",
     "        'config': None,\n",
     "        'initial_account': 2e3,\n",
-    "        'gamma': 0.91,\n",
+    "        'gamma': 0.92,\n",
     "        'turbulence_thresh': 30,\n",
     "        'min_stock_rate': 5e-1,\n",
     "        'max_stock': 1e2,\n",
@@ -938,14 +928,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Make sure the gammas are the same in all 3 places\n",
     "#Make sure you update the gamma on each training session on each training episode!  \n",
-    "ERL_PARAMS = {\"learning_rate\": 0.0033,\"batch_size\": 2048,\"gamma\":  0.91,\n",
-    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8], \"target_step\":30000, \"eval_gap\":30,\n",
+    "ERL_PARAMS = {\"learning_rate\": 0.3,\"batch_size\": 2048,\"gamma\":  0.92,\n",
+    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":30000, \"eval_gap\":30,  #the net dimension needs to match the config values\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
     "\n",
@@ -959,12 +949,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#initial train\n",
-    "TrainSd = datetime.now()+timedelta(days=-180); #450\n",
+    "TrainSd = datetime.now()+timedelta(days=-60); #450\n",
     "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
     "TrainEd = datetime.now()+timedelta(days=-1);\n",
@@ -973,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1025,21 +1015,16 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |    -0.50    0.00   12345  |     0.14      0.08\n",
-      "| 4.00e+04        28  |    -0.56    0.00   12345  |     0.12      0.10\n",
-      "| 6.00e+04        42  |    -0.53    0.00   12345  |     0.06      0.11\n",
-      "| 8.00e+04        56  |    -0.54    0.00   12345  |     0.07      0.11\n",
-      "| 1.00e+05        70  |    -0.51    0.00   12345  |     0.06      0.12\n",
-      "| 1.20e+05        84  |    -0.47    0.00   12345  |     0.12      0.11\n",
-      "| 1.40e+05        98  |    -0.50    0.00   12345  |     0.07      0.11\n",
-      "| 1.60e+05       112  |    -0.48    0.00   12345  |     0.20      0.11\n",
-      "| 1.80e+05       126  |    -0.48    0.00   12345  |     0.19      0.12\n",
-      "| 2.00e+05       140  |    -0.49    0.00   12345  |     0.05      0.11\n",
-      "| 2.20e+05       154  |    -0.51    0.00   12345  |     0.19      0.12\n",
-      "| 2.40e+05       168  |    -0.48    0.00   12345  |     0.09      0.13\n",
-      "| 2.60e+05       181  |    -0.50    0.00   12345  |     0.16      0.15\n",
-      "| 2.80e+05       195  |    -0.51    0.00   12345  |     0.16      0.13\n",
-      "| 3.00e+05       209  |    -0.51    0.00   12345  |     0.01      0.12\n"
+      "| 2.00e+04        15  |    -0.48    0.00   12345  |     0.01      0.21\n",
+      "| 4.00e+04        30  |    -0.47    0.00   12345  |     0.11      0.30\n",
+      "| 6.00e+04        44  |    -0.48    0.00   12345  |     0.05      0.44\n",
+      "| 8.00e+04        59  |    -0.49    0.00   12345  |     0.08      0.61\n",
+      "| 1.00e+05        74  |    -0.50    0.00   12345  |     0.00      0.77\n",
+      "| 1.20e+05        89  |    -0.49    0.00   12345  |     0.01      0.92\n",
+      "| 1.40e+05       104  |    -0.50    0.00   12345  |     0.01      1.07\n",
+      "| 1.60e+05       119  |    -0.49    0.00   12345  |     0.02      1.15\n",
+      "| 1.80e+05       133  |    -0.47    0.00   12345  |     0.07      1.30\n",
+      "| 2.00e+05       148  |    -0.47    0.00   12345  |     0.00      1.55\n"
      ]
     }
    ],
@@ -1060,18 +1045,18 @@
     "      API_BASE_URL = API_BASE_URL,\n",
     "      erl_params=ERL_PARAMS,\n",
     "      cwd='./papertrading_erl',  #going to point the alpaca bot at the actual bot that is trained #notice this path changes during the retrain!\n",
-    "      break_step=3e5)"
+    "      break_step=2e5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Test\n",
-    "TestSd = datetime.now()+timedelta(days=-120);\n",
-    "TestSd = TestSd.strftime('%Y-%m-%d')\n",
+    "TestSd = datetime.now()+timedelta(days=-30);\n",
+    "TestSd = TestSd.strftime('%Y-%m-%d') \n",
     "\n",
     "#print(sd)\n",
     "TestEd = datetime.now()+timedelta(days=-1);\n",
@@ -1080,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1123,10 +1108,24 @@
      "output_type": "stream",
      "text": [
       "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
-      "price_array:  31670\n",
-      "| load actor from: ./papertrading_erl/actor.pth\n",
+      "price_array:  8210\n",
+      "| load actor from: ./papertrading_erl/actor.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_9272\\2192916491.py:106: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "  s_tensor = _torch.as_tensor((state,), device=device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Test Finished!\n",
-      "episode_return 0.9990010410480409\n"
+      "episode_return 0.9990010394209596\n"
      ]
     }
    ],
